# animus-cli

./: .gitignore  AGENTS.md  CHANGELOG-v0.1.0.md  CLAUDE.md  Cargo.toml  README.md
.ao/: core-state.json  (+1 more)
crates/orchestrator-daemon-runtime/: Cargo.toml  README.md
crates/orchestrator-daemon-runtime/src/: default_daemon_run_host.rs  default_project_tick_driver.rs  em_work_queue_state.rs  execute_project_tick_script.rs  hook_backed_project_tick_driver.rs  hook_backed_project_tick_operations.rs  lib.rs  notification_runtime.rs  project_tick_action.rs  project_tick_action_effect.rs  project_tick_context.rs  project_tick_driver.rs  project_tick_execution_outcome.rs  project_tick_hooks.rs  project_tick_operation_executor.rs  project_tick_plan.rs  project_tick_preparation.rs  project_tick_run_mode.rs  project_tick_script.rs  project_tick_summary.rs  project_tick_summary_input.rs  queue_service.rs  ready_dispatch_plan.rs  ready_task_dispatch_plan.rs  ready_task_dispatch_support.rs  reconcile_completed_processes.rs  requirement_lifecycle_transition.rs  run_daemon.rs  run_project_tick.rs  runner_event.rs  schedule_dispatch.rs  sync_task_status_for_workflow_result.rs  task_lifecycle_support.rs  task_state_transition.rs  tick_summary_builder.rs  workflow_state_reconciler.rs
crates/orchestrator-daemon-runtime/src/daemon/: daemon_run_hooks.rs  daemon_runtime_options.rs  daemon_runtime_state.rs  run_daemon.rs
crates/orchestrator-daemon-runtime/src/dispatch/: completion_reconciliation_plan.rs  dispatch_support.rs  mod.rs  process_manager.rs  project_terminal_workflow_status.rs  (+2 more)
(+655 files in other folders)
