[package]
name = "orchestrator-daemon-runtime"
version = "0.1.0"
edition = "2021"

[lib]
name = "orchestrator_daemon_runtime"
path = "src/lib.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
workflow-runner = { path = "../workflow-runner" }
